# refactor-graph-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml
common/: Cargo.toml
common/src/: data_type.rs  lib.rs
computation/: Cargo.toml
computation/deprecated/: element_wise.rs
computation/src/: blob.rs  edge.rs  graph.rs  infer.rs  lib.rs  node.rs  op_type.rs  operator.rs  subgraph.rs  tensor.rs
computation/src/operators/: binary.rs  compress.rs  conv.rs  det.rs  element_wise.rs  eq.rs  functions.rs  gather.rs  gemm.rs  global_pool.rs  infer.rs  matmul.rs  mod.rs  op_type.rs  pool.rs  reshape.rs  unary.rs
graph-topo/: Cargo.toml
graph-topo/src/: builder.rs  container.rs  graph_topo.rs  lib.rs
graph-topo/src/searcher/: internal.rs  mod.rs
kernel/: Cargo.toml
kernel-library/: Cargo.toml
kernel/src/: foreigner.rs  lib.rs
onnx/: Cargo.toml  README.md  build.rs
onnx/src/: graph.rs  lib.rs  onnx.rs  operators.rs  tensor.rs
operators/: Cargo.toml
operators/src/: lib.rs
runtime/: Cargo.toml
runtimes/cpu/: Cargo.toml
runtimes/cpu/src/: lib.rs  stack.rs
runtimes/cpu/src/operator/: mod.rs
runtimes/kernel-meta/: Cargo.toml
runtimes/kernel-meta/src/: broadcaster.rs  lib.rs
runtimes/nvidia/: Cargo.toml  build.rs  wrapper.h
runtimes/nvidia/src/: context.rs  device.rs  graph.rs  lib.rs  main.rs  memory.rs  stream.rs
runtimes/nvidia/src/driver/: context.rs  device.rs  graph.rs  memory.rs  mod.rs  nvrtc.rs  stream.rs
runtimes/nvidia/src/graph/: builder_collector.rs  mem_offset.rs  mod.rs
runtimes/nvidia/src/kernel/: mod.rs
stack-calculator/: Cargo.toml
stack-calculator/src/: flat.rs  lib.rs  unidir.rs
