[package]
name = "computation"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
graph-topo = { path = "../graph-topo" }
smallvec = "1.11"
static_assertions = "1.1.0"
