[package]
name = "onnx"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.11"
common = { path = "../common" }
graph-topo = { path = "../graph-topo" }
computation = { path = "../computation" }
