[package]
name = "onnx"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
bytes = "1.4"
common = { path = "../common" }
graph-topo = { path = "../graph-topo" }
computation = { path = "../computation" }

[build-dependencies]
prost-build = "0.11"
