[package]
name = "cpu-runtime"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph-topo = { path = "../../graph-topo" }
computation = { path = "../../computation" }
stack-calculator = { path = "../../stack-calculator" }

rayon = "1.8"
