[package]
name = "nvidia-runtime"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph-topo = { path = "../../graph-topo" }
computation = { path = "../../computation" }
stack-calculator = { path = "../../stack-calculator" }

rayon = "1.8"

[build-dependencies]
bindgen = "0.69"
find_cuda_helper = "0.2"
